--- a/src/App.scoped.scss
+++ b/src/App.scoped.scss
@@ -1,5 +1,15 @@
+.app {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 canvas {
   background: #fff;
+  position: fixed;
+  z-index: 100;
 }
 
 .right-panels {
