--- a/src/components/Panel/Panel.scoped.scss
+++ b/src/components/Panel/Panel.scoped.scss
@@ -3,6 +3,7 @@
   background: #999;
   width: 300px;
   height: 500px;
+  z-index: 150;
   &-title {
     font-weight: normal;
     font-size: 1rem;
